moving style.css code into the head

--- a/views/urkel.ejs
+++ b/views/urkel.ejs
@@ -1,6 +1,37 @@
 <html>
 	<head>
-		<link href="/style.css" rel="stylesheet" type="text/css">
+		<style>
+			body {
+				background-image: url('urkel.jpg');
+				max-width: 430px;
+				height: 352px;
+				background-repeat: no-repeat;
+				padding: 0px;
+				margin: 0px;
+			}
+
+			#content {
+				width: 417px;
+			}
+
+			div {
+				font-size: 40px;
+				color: white;
+				text-transform: uppercase;
+			}
+
+			#headline {
+				text-align: right;
+			}
+
+
+			#didido {
+				position: absolute;
+				bottom: 41px;
+				text-align: left;
+				left: 25px;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="content">
