--- a/views/urkel.ejs
+++ b/views/urkel.ejs
@@ -24,10 +24,9 @@
 				text-align: right;
 			}
 
-
 			#didido {
 				position: absolute;
-				bottom: 41px;
+				top: 300px;
 				text-align: left;
 				left: 25px;
 			}
